force-app/main/default/objects/PersonnesPresentes__c/PersonnesPresentes__c.object-meta.xml
<CustomObject>
    <description>Personnes présentes à l&#39;examen.</description>
    <label>Personne présente</label>
    <nameField>
        <label>Nom de Personnes présentes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnes présentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>