force-app/main/default/objects/PersonnesPresentes__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <length>30</length>
    <type>Text</type>
</CustomField>