force-app/main/default/objects/PersonnesPresentes__c/fields/Examen__c.field-meta.xml
<CustomField>
    <fullName>Examen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Examen auquel la personne présente a assisté.</description>
    <label>Examen</label>
    <referenceTo>Examen__c</referenceTo>
    <relationshipLabel>Personnes présentes</relationshipLabel>
    <relationshipName>PersonnesPresentes</relationshipName>
    <type>Lookup</type>
</CustomField>