force-app/main/default/objects/PersonnesPresentes__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <description>Nom de la personne présente à l&#39;examen</description>
    <label>Nom</label>
    <length>25</length>
    <type>Text</type>
</CustomField>