force-app/main/default/objects/PersonnesPresentes__c/fields/Qualite__c.field-meta.xml
<CustomField>
    <fullName>Qualite__c</fullName>
    <label>Qualité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Acheteur</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>BCA</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bailleur</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Correspondant EAD</label>
            </value>
            <value>
                <fullName>CF</fullName>
                <label>Chef de fourrière</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>Conseil du lésé</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Chef de station</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Contrôleur technique</label>
            </value>
            <value>
                <fullName>EA</fullName>
                <label>Expert adverse</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Lésé</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Locataire</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Propriétaire</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Réparateur</label>
            </value>
            <value>
                <fullName>RL</fullName>
                <label>Représentant du lésé</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <label>Responsable de parc</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Sous-traitant</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>