force-app/main/default/objects/PersonnesPresentes__c/fields/Titre__c.field-meta.xml
<CustomField>
    <fullName>Titre__c</fullName>
    <label>Titre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LibelleTitre</valueSetName>
    </valueSet>
</CustomField>